MVC pattern style and Mongoose replace MongoDB and add Docker

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URL=mongodb://127.0.0.1:27017/project
-PORT=7070
+DB_USERNAME=user
+DB_PASSWORD=password
+DB_NAME=advs_database
 COOKIE_SECRET=password
+PORT=7070
