--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-DB_USERNAME=user
-DB_PASSWORD=password
-DB_NAME=advs_database
+DB_USERNAME=big_boss
+DB_PASSWORD=1234
+DB_NAME=delivery
+DB_HOST=localhost
+DB_PORT=5432
 COOKIE_SECRET=password
 PORT=7070
