--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Stanislav",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "connect-mongo": "^4.6.0",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -18,6 +20,9 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4"
   }
