--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "sequelize": "^6.37.5",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
