--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,30 @@
 version: '4.4'
 
 services:
-  mongodb:
-    image: mongo
-    restart: always
-    expose:
-      - 27017
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${DB_USERNAME:-user}
-      - MONGO_INITDB_ROOT_PASSWORD=${DB_PASSWORD:-password}
-      - MONGO_INITDB_DATABASE=${DB_NAME:-advs_database}
-
-  mongo-express:
-    image: mongo-express
-    restart: always
+      ZOOKEEPER_CLIENT_PORT: 2181
     ports:
-      - 8081:8081
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${DB_USERNAME:-admin}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${DB_PASSWORD:-password}
-    depends_on:
-      - mongodb
+      - "2181:2181"
 
-  advs:
-    build: .
-    ports:
-      - 80:3000
-    environment:
-      - SERVER_PORT=${SERVER_PORT:-7070}
-      - DB_USERNAME=${DB_USERNAME:-user}
-      - DB_PASSWORD=${DB_PASSWORD:-password}
-      - DB_NAME=${DB_NAME:-advs_database}
-      - DB_HOST=mongodb://mongodb:27017
-      - COOKIE_SECRET=${COOKIE_SECRET:-password}
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
     depends_on:
-      - mongodb
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
