--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.66.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.7.0",
+    "redis-cli": "^2.1.2",
     "sequelize": "^6.37.5",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4"
